styles/widgets/material/scheduler.material.less
.dx-size-default() {
    @MATERIAL_SCHEDULER_WORKSPACE_DATE_TABLE_CELL_HEIGHT: 38px;
    @MATERIAL_SCHEDULER_HEADER_PANEL_TOP_GAP: 0; // TODO - remove this variable

    @MATERIAL_SCHEDULER_HEADER_HEIGHT: 64px;
    @MATERIAL_SCHEDULER_NAVIGATOR_HEIGHT: 36px;
    @MATERIAL_SCHEDULER_NAVIGATOR_BORDER_RADIUS: @button-border-radius;
    @MATERIAL_SCHEDULER_NAVIGATION_BUTTONS_PADDING: 6px;

    @MATERIAL_SCHEDULER_APPOINTMENT_MONTH_TEXT_SIZE: 12px;
    @MATERIAL_SCHEDULER_APPOINTMENT_WEEK_TITLE_TEXT_SIZE: 12px;
    @MATERIAL_SCHEDULER_APPOINTMENT_WEEK_DATE_TEXT_SIZE: 10px;

    @MATERIAL_SCHEDULER_WORKSPACE_INFO_TEXT_SIZE: 16px;
    @MATERIAL_SCHEDULER_ALL_DAY_TITLE_FONT_SIZE: 12px;

    @MATERIAL_SCHEDULER_TIME_PANEL_FONT_SIZE: 12px;
    @MATERIAL_SCHEDULER_HEADER_PANEL_WEEK_FONT_SIZE: 12px;
    @MATERIAL_SCHEDULER_HEADER_PANEL_DAY_FONT_SIZE: 30px;
    @MATERIAL_SCHEDULER_AGENDA_APPOINTMENT_FONT_SIZE: 16px;
    @MATERIAL_SCHEDULER_GROUP_HEADER_AGENDA_FONT_SIZE: 18px;
    @MATERIAL_SCHEDULER_GROUP_HEADER_TABLE_CELL_WIDTH: 80px;
    @MATERIAL_SCHEDULER_APPOINTMENT_TRANSPARENT_LEFT_BORDER: 1px solid transparent;
    @MATERIAL_SCHEDULER_APPOINTMENT_TRANSPARENT_RIGHT_BORDER: 1px solid transparent;

    @MATERIAL_SCHEDULER_APPOINTMENT_TOOLTIP_WIDTH: 270px;
}

.dx-size-compact() {
    @MATERIAL_SCHEDULER_WORKSPACE_DATE_TABLE_CELL_HEIGHT: 36px;
    @MATERIAL_SCHEDULER_HEADER_PANEL_TOP_GAP: 5px;

    @MATERIAL_SCHEDULER_HEADER_HEIGHT: 39px;
    @MATERIAL_SCHEDULER_NAVIGATOR_HEIGHT: 25px;
    @MATERIAL_SCHEDULER_NAVIGATOR_BORDER_RADIUS: @button-border-radius;
    @MATERIAL_SCHEDULER_NAVIGATION_BUTTONS_PADDING: 4px;

    @MATERIAL_SCHEDULER_APPOINTMENT_MONTH_TEXT_SIZE: 11px;
    @MATERIAL_SCHEDULER_WORKSPACE_INFO_TEXT_SIZE: 14px;
    @MATERIAL_SCHEDULER_ALL_DAY_TITLE_FONT_SIZE: 11px;

    @MATERIAL_SCHEDULER_AGENDA_APPOINTMENT_FONT_SIZE: 14px;
    @MATERIAL_SCHEDULER_GROUP_HEADER_AGENDA_FONT_SIZE: 14px;
    @MATERIAL_SCHEDULER_GROUP_HEADER_TABLE_CELL_WIDTH: 60px;
    @MATERIAL_SCHEDULER_APPOINTMENT_TRANSPARENT_LEFT_BORDER: 1px solid transparent;
    @MATERIAL_SCHEDULER_APPOINTMENT_TRANSPARENT_RIGHT_BORDER: 1px solid transparent;

    @MATERIAL_SCHEDULER_APPOINTMENT_TOOLTIP_WIDTH: 270px;
}

@MATERIAL_SCHEDULER_ALL_DAY_TABLE_CELL_HEIGHT: @MATERIAL_SCHEDULER_WORKSPACE_DATE_TABLE_CELL_HEIGHT * 1.5;
@MATERIAL_SCHEDULER_COLLAPSED_ALL_DAY_TABLE_CELL_HEIGHT: @MATERIAL_SCHEDULER_WORKSPACE_DATE_TABLE_CELL_HEIGHT * 0.5;
@MATERIAL_SCHEDULER_HEADER_PANEL_TABLE_CELL_HEIGHT: 56px;

@MATERIAL_SCHEDULER_CURRENT_TIME_CELL_BORDER_SIZE: 2px;

@MATERIAL_SCHEDULER_FOCUSED_TAB_BORDER: 1px solid @scheduler-tab-focused-border-color;
@MATERIAL_SCHEDULER_RECURRENCE_EDITOR_BORDER: 1px solid @scheduler-recurence-editor-border-color;

@MATERIAL_SCHEDULER_VIEW_SWITCHER_FONT_SIZE: @MATERIAL_BASE_FONT_SIZE;
@MATERIAL_SCHEDULER_MONTH_DATE_TEXT_SIZE: 14px;
@MATERIAL_SCHEDULER_APPOINTMENT_TOOLTIP_FONT_SIZE: @MATERIAL_H5_FONT_SIZE;

@MATERIAL_SCHEDULER_SWITCHER_LABEL_OFFSET: 60px;

@SCHEDULER_FIRST_OF_MONTH_BORDER: 1px solid @SCHEDULER_FIRST_MONTH_BORDER_COLOR;

.scheduler-mixin(65px);

.dx-scheduler-time-panel-cell {
    height: @MATERIAL_SCHEDULER_WORKSPACE_DATE_TABLE_CELL_HEIGHT;

    &:after {
        content: none;
    }

    > div {
        margin-top: -6px;
        font-size: @MATERIAL_SCHEDULER_TIME_PANEL_FONT_SIZE;
    }
    padding-right: 8px;
}

.dx-scheduler-date-table-cell {
    height: @MATERIAL_SCHEDULER_WORKSPACE_DATE_TABLE_CELL_HEIGHT;
}

.dx-scheduler-all-day-title {
    height: @MATERIAL_SCHEDULER_ALL_DAY_TABLE_CELL_HEIGHT;
    line-height: @MATERIAL_SCHEDULER_ALL_DAY_TABLE_CELL_HEIGHT;
    font-size: @MATERIAL_SCHEDULER_ALL_DAY_TITLE_FONT_SIZE;
    top: @MATERIAL_SCHEDULER_HEADER_HEIGHT;
    border-bottom:  @SCHEDULER_BASE_BORDER;

    .dx-scheduler-work-space-all-day-collapsed & {
        height: @MATERIAL_SCHEDULER_COLLAPSED_ALL_DAY_TABLE_CELL_HEIGHT;
        line-height: @MATERIAL_SCHEDULER_COLLAPSED_ALL_DAY_TABLE_CELL_HEIGHT;
    }
}

.dx-scheduler-all-day-title-mixin(@MATERIAL_SCHEDULER_HEADER_HEIGHT + @MATERIAL_SCHEDULER_HEADER_PANEL_TOP_GAP);

.dx-scheduler-work-space-week,
.dx-scheduler-work-space-work-week {
    .dx-scheduler-all-day-title {
        top: @MATERIAL_SCHEDULER_HEADER_HEIGHT + @MATERIAL_SCHEDULER_HEADER_PANEL_TABLE_CELL_HEIGHT;
    }

    .dx-scheduler-all-day-title-mixin(@MATERIAL_SCHEDULER_HEADER_HEIGHT + @MATERIAL_SCHEDULER_HEADER_PANEL_TABLE_CELL_HEIGHT);

    .dx-scheduler-appointment-content {
        .dx-scheduler-appointment-title {
            font-size: @MATERIAL_SCHEDULER_APPOINTMENT_WEEK_TITLE_TEXT_SIZE;
        }
        .dx-scheduler-appointment-content-date {
            font-size: @MATERIAL_SCHEDULER_APPOINTMENT_WEEK_DATE_TEXT_SIZE;
        }
    }
}

.dx-scheduler-all-day-table {
    height: @MATERIAL_SCHEDULER_ALL_DAY_TABLE_CELL_HEIGHT;

    .dx-scheduler-work-space-all-day-collapsed & {
        height: @MATERIAL_SCHEDULER_COLLAPSED_ALL_DAY_TABLE_CELL_HEIGHT;
    }
}

.dx-scheduler-header-panel {
    margin-top: @MATERIAL_SCHEDULER_HEADER_PANEL_TOP_GAP;
}

.dx-scheduler-header-panel-cell {
    height: @MATERIAL_SCHEDULER_HEADER_PANEL_TABLE_CELL_HEIGHT;
    text-align: left;
    vertical-align: bottom;

    &.dx-scheduler-header-panel-current-time-cell {
        &:before {
            top: @MATERIAL_SCHEDULER_HEADER_PANEL_TABLE_CELL_HEIGHT - @MATERIAL_SCHEDULER_CURRENT_TIME_CELL_BORDER_SIZE - 1;
            height: @MATERIAL_SCHEDULER_CURRENT_TIME_CELL_BORDER_SIZE;
        }
    }

    .dx-scheduler-header-panel-cell-firstline, .dx-scheduler-header-panel-cell-secondline {
        display: block;
        margin-left: 15px;
    }

    .dx-scheduler-header-panel-cell-firstline {
        font-size: @MATERIAL_SCHEDULER_HEADER_PANEL_WEEK_FONT_SIZE;
        line-height: 7px;
    }

    .dx-scheduler-header-panel-cell-secondline {
        font-size: @MATERIAL_SCHEDULER_HEADER_PANEL_DAY_FONT_SIZE;
        line-height: @MATERIAL_SCHEDULER_HEADER_PANEL_DAY_FONT_SIZE + 5;
        
    }
}
/* ... */

